name: quorum-tools
version: 0.0.1
synopsis: Orchestration and testing for the Quorum blockchain
license: Apache
license-file: LICENSE.md
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs
  build-depends:
    base                  == 4.9.* || == 4.10.*,
    text                  == 1.2.*,
    mtl                   == 2.2.*,
    async                 == 2.1.*,
    managed               == 1.0.*,
    foldl                 == 1.2.*,
    lens                  == 4.14.* || == 4.15.*,
    lens-aeson            == 1.0.*,
    bytestring            == 0.10.*,
    turtle                == 1.3.*,
    aeson                 == 0.11.* || == 1.1.*,
    wreq                  == 0.5.*,
    safe                  == 0.3.*,
    transformers          == 0.5.*,
    containers            == 0.5.*,
    symmetric-properties  == 0.1.*,
    time                  == 1.6.* || == 1.8.*,
    time-units            == 1.0.*,
    http-client           == 0.5.*,
    base16-bytestring     == 0.1.*,
    cryptonite            == 0.24.*,
    byteable              == 0.1.*,
    unordered-containers  == 0.2.*,
    vector                == 0.12.*,
    memory                == 0.14.*,
    monad-loops           == 0.4.*,
    optional-args         == 1.0.*,
    ansi-terminal         == 0.6.*,
    constellation         == 0.1.*,
    stm                   == 2.4.*,
    uri-bytestring        == 0.2.*,
    async-pool            == 0.9.0.*,
    data-default          == 0.7.*,
    ekg                   == 0.4.*,
    ekg-core              == 0.1.*,
    rate-limit            == 1.4.*,
    thyme                 == 0.3.*,
    vector-space          == 0.12.*
  exposed-modules:
    QuorumTools
    QuorumTools.Checkpoint
    QuorumTools.Client
    QuorumTools.Cluster
    QuorumTools.Constellation
    QuorumTools.Control
    QuorumTools.Genesis
    QuorumTools.IpTables
    QuorumTools.Mains.LocalNew
    QuorumTools.Mains.LocalSpam
    QuorumTools.Mains.LocalStart
    QuorumTools.Metrics
    QuorumTools.NetworkInfo
    QuorumTools.Observing
    QuorumTools.Options
    QuorumTools.PacketFilter
    QuorumTools.Spam
    QuorumTools.Test.Outline
    QuorumTools.Test.Raft.CycleTest
    QuorumTools.Test.Raft.LeaderPartitionTest
    QuorumTools.Test.Raft.LeaveJoinTest
    QuorumTools.Test.Raft.NewcomerRejoinTest
    QuorumTools.Test.Raft.PrivateStateTest
    QuorumTools.Test.Raft.PublicStateTest
    QuorumTools.Test.Raft.RestartNodeTest
    QuorumTools.Test.State
    QuorumTools.Types
    QuorumTools.Util
  other-modules:
  default-language: Haskell2010

executable local-new
  main-is          : LocalNew.hs
  hs-source-dirs   : app
  ghc-options      : -Wall -fwarn-tabs -threaded -rtsopts
  build-depends    : base, quorum-tools
  default-language : Haskell2010

executable local-start
  main-is          : LocalStart.hs
  hs-source-dirs   : app
  ghc-options      : -Wall -fwarn-tabs -threaded -rtsopts
  build-depends    : base, quorum-tools
  default-language : Haskell2010

executable local-spam
  main-is          : LocalSpam.hs
  hs-source-dirs   : app
  ghc-options      : -Wall -fwarn-tabs -threaded -rtsopts
  build-depends    : base, quorum-tools
  default-language : Haskell2010

test-suite raft
  main-is          : Raft.hs
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  ghc-options      : -Wall -fwarn-tabs -threaded -rtsopts
  build-depends    :
    base,
    quorum-tools
  default-language : Haskell2010
