name: raft-demo
version: 0.0.1
synopsis: Orchestration, testing, and demonstration of JPM Raft-Ethereum
license: Apache
license-file: LICENSE.md
build-type: Simple
cabal-version: >=1.10

executable cluster
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -threaded -rtsopts
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base, text, mtl, async, managed, foldl, lens, lens-aeson, bytestring, turtle, aeson, wreq, safe, transformers, containers, symmetric-properties, time
  other-modules: Cluster, ClusterAsync, PacketFilter, IpTables, SharedPartitioning, TestOutline
  default-language: Haskell2010

executable bootstrap
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -threaded -rtsopts
  main-is: Bootstrap.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base, text, mtl, async, managed, foldl, lens, lens-aeson, bytestring, turtle, aeson, wreq, safe, transformers, containers, symmetric-properties, time
  other-modules: Cluster, ClusterAsync, PacketFilter, IpTables, SharedPartitioning, TestOutline
  default-language: Haskell2010

executable test1
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -threaded -rtsopts
  main-is: test1.hs
  build-depends: base, text, mtl, async, managed, foldl, lens, lens-aeson, bytestring, turtle, aeson, wreq, safe, transformers, containers, symmetric-properties, time
  other-modules: Cluster, ClusterAsync, PacketFilter, IpTables, SharedPartitioning, TestOutline
  default-language: Haskell2010

executable test2
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -threaded -rtsopts
  main-is: test2.hs
  build-depends: base, text, mtl, async, managed, foldl, lens, lens-aeson, bytestring, turtle, aeson, wreq, safe, transformers, containers, symmetric-properties, time
  other-modules: Cluster, ClusterAsync, PacketFilter, IpTables, SharedPartitioning, TestOutline
  default-language: Haskell2010

executable test3
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -threaded -rtsopts
  main-is: test3.hs
  build-depends: base, text, mtl, async, managed, foldl, lens, lens-aeson, bytestring, turtle, aeson, wreq, safe, transformers, containers, symmetric-properties, time
  other-modules: Cluster, ClusterAsync, PacketFilter, IpTables, SharedPartitioning, TestOutline
  default-language: Haskell2010
