name: raft-demo
version: 0.0.1
synopsis: Orchestration, testing, and demonstration of JPM Raft-Ethereum
license: Apache
license-file: LICENSE.md
build-type: Simple
cabal-version: >=1.10

executable local-cluster
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -threaded -rtsopts
  main-is: LocalCluster.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base, text, mtl, async, managed, foldl, lens, lens-aeson, bytestring, turtle, aeson, wreq, safe, transformers, containers, symmetric-properties, time, rate-limit, time-units, http-client
  other-modules: Cluster, ClusterAsync, Cluster.Client, PacketFilter, IpTables, SharedPartitioning, TestOutline
  default-language: Haskell2010

executable local-spam
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -threaded -rtsopts
  main-is: LocalSpam.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base, text, mtl, async, managed, foldl, lens, lens-aeson, bytestring, turtle, aeson, wreq, safe, transformers, containers, symmetric-properties, time, rate-limit, time-units, http-client
  other-modules: Cluster, ClusterAsync, Cluster.Client, PacketFilter, IpTables, SharedPartitioning, TestOutline
  default-language: Haskell2010

executable aws-bootstrap
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -threaded -rtsopts
  main-is: AwsBootstrap.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base, text, mtl, async, managed, foldl, lens, lens-aeson, bytestring, turtle, aeson, wreq, safe, transformers, containers, symmetric-properties, time, rate-limit, time-units, http-client
  other-modules: Cluster, ClusterAsync, Cluster.Client, PacketFilter, IpTables, SharedPartitioning, TestOutline
  default-language: Haskell2010

executable test1
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -threaded -rtsopts
  main-is: test1.hs
  build-depends: base, text, mtl, async, managed, foldl, lens, lens-aeson, bytestring, turtle, aeson, wreq, safe, transformers, containers, symmetric-properties, time, rate-limit, time-units, http-client
  other-modules: Cluster, ClusterAsync, Cluster.Client, PacketFilter, IpTables, SharedPartitioning, TestOutline
  default-language: Haskell2010

executable test2
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -threaded -rtsopts
  main-is: test2.hs
  build-depends: base, text, mtl, async, managed, foldl, lens, lens-aeson, bytestring, turtle, aeson, wreq, safe, transformers, containers, symmetric-properties, time, rate-limit, time-units, http-client
  other-modules: Cluster, ClusterAsync, Cluster.Client, PacketFilter, IpTables, SharedPartitioning, TestOutline
  default-language: Haskell2010

executable test3
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -threaded -rtsopts
  main-is: test3.hs
  build-depends: base, text, mtl, async, managed, foldl, lens, lens-aeson, bytestring, turtle, aeson, wreq, safe, transformers, containers, symmetric-properties, time, rate-limit, time-units, http-client
  other-modules: Cluster, ClusterAsync, Cluster.Client, PacketFilter, IpTables, SharedPartitioning, TestOutline
  default-language: Haskell2010

executable test4
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs -threaded -rtsopts
  main-is: test4.hs
  build-depends: base, text, mtl, async, managed, foldl, lens, lens-aeson, bytestring, turtle, aeson, wreq, safe, transformers, containers, symmetric-properties, time, rate-limit, time-units, http-client
  other-modules: Cluster, ClusterAsync, Cluster.Client, PacketFilter, IpTables, SharedPartitioning, TestOutline
  default-language: Haskell2010
