name: raft-demo
version: 0.0.1
synopsis: Orchestration, testing, and demonstration of JPM Raft-Ethereum
license: Apache
license-file: LICENSE.md
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  ghc-options: -Wall -fwarn-tabs
  build-depends:
    base                  == 4.9.*,
    text                  == 1.2.*,
    mtl                   == 2.2.*,
    async                 == 2.1.*,
    managed               == 1.0.*,
    foldl                 == 1.2.*,
    lens                  == 4.14.* || == 4.15.*,
    lens-aeson            == 1.0.*,
    bytestring            == 0.10.*,
    turtle                == 1.3.*,
    aeson                 == 0.11.* || == 1.1.*,
    wreq                  == 0.4.*,
    safe                  == 0.3.*,
    transformers          == 0.5.*,
    containers            == 0.5.*,
    symmetric-properties  == 0.1.*,
    time                  == 1.6.* || == 1.8.*,
    rate-limit            == 1.1.*,
    time-units            == 1.0.*,
    http-client           == 0.4.*
  exposed-modules:
    Mains.AwsBootstrap
    Mains.AwsSpam
    Mains.LeaderPartitionTest
    Mains.LocalNew
    Mains.LocalSpam
    Mains.LocalStart
    Mains.PartitionTest
    Mains.PrivateStateTest
    Mains.PublicStateTest
    Mains.RestartNodeTest
    Mains.Test2
  other-modules:
    ClusterAsync
    Cluster
    Cluster.Aws
    Cluster.Client
    Cluster.Types
    PacketFilter
    IpTables
    SharedPartitioning
    TestOutline
    Checkpoint
    Control
  default-language: Haskell2010

executable local-new
  main-is          : LocalNew.hs
  hs-source-dirs   : app
  ghc-options      : -Wall -fwarn-tabs -threaded -rtsopts
  build-depends    : base, raft-demo
  default-language : Haskell2010

executable local-start
  main-is          : LocalStart.hs
  hs-source-dirs   : app
  ghc-options      : -Wall -fwarn-tabs -threaded -rtsopts
  build-depends    : base, raft-demo
  default-language : Haskell2010

executable local-spam
  main-is          : LocalSpam.hs
  hs-source-dirs   : app
  ghc-options      : -Wall -fwarn-tabs -threaded -rtsopts
  build-depends    : base, raft-demo
  default-language : Haskell2010

executable aws-bootstrap
  main-is          : AwsBootstrap.hs
  hs-source-dirs   : app
  ghc-options      : -Wall -fwarn-tabs -threaded -rtsopts
  build-depends    : base, raft-demo
  default-language : Haskell2010

executable aws-spam
  main-is          : AwsSpam.hs
  hs-source-dirs   : app
  ghc-options      : -Wall -fwarn-tabs -threaded -rtsopts
  build-depends    : base, raft-demo
  default-language : Haskell2010

test-suite partition
  main-is          : PartitionTest.hs
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  ghc-options      : -Wall -fwarn-tabs -threaded -rtsopts
  build-depends    : base, raft-demo
  default-language : Haskell2010

test-suite test2
  main-is          : Test2.hs
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  ghc-options      : -Wall -fwarn-tabs -threaded -rtsopts
  build-depends    : base, raft-demo
  default-language : Haskell2010

test-suite leader-partition
  main-is          : LeaderPartitionTest.hs
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  ghc-options      : -Wall -fwarn-tabs -threaded -rtsopts
  build-depends    : base, raft-demo
  default-language : Haskell2010

test-suite public-state
  main-is          : PublicStateTest.hs
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  ghc-options      : -Wall -fwarn-tabs -threaded -rtsopts
  build-depends    : base, raft-demo
  default-language : Haskell2010

test-suite private-state
  main-is          : PrivateStateTest.hs
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  ghc-options      : -Wall -fwarn-tabs -threaded -rtsopts
  build-depends    : base, raft-demo
  default-language : Haskell2010

test-suite restart-node
  main-is          : RestartNodeTest.hs
  type             : exitcode-stdio-1.0
  hs-source-dirs   : tests
  ghc-options      : -Wall -fwarn-tabs -threaded -rtsopts
  build-depends    : base, raft-demo
  default-language : Haskell2010
